--- a/test.css
+++ b/test.css
@@ -20,7 +20,7 @@ video {
    opacity: .5;
 }
 
-#polina {
+#sintayi {
   font-family: Agenda-Light, Agenda Light, Agenda, Arial Narrow, sans-serif;
   font-weight:100;
   background: rgba(0,0,0,0.3);
@@ -37,7 +37,7 @@ h1 {
   margin-top: 0;
   letter-spacing: .3rem;
 }
-#polina button {
+#sintayi button {
   display: block;
   width: 80%;
   padding: .4rem;
@@ -50,7 +50,7 @@ h1 {
   cursor: pointer;
   transition: .3s background;
 }
-#polina button:hover {
+#sintayi button:hover {
    background: rgba(0,0,0,0.5);
 }
 
